<resources>
    <string name="app_name">Control Vehicular</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="posicion">Posición</string>
    <string name="bajas">Bajas</string>
    <string name="altas">Altas</string>
    <string name="reflector">Reflector</string>
    <string name="interior">Interior</string>
    <string name="tituloLuces">Luces</string>
    <string name="tituloBocina">Bocina</string>
    <string name="tituloBloqPuertas">Bloqueo de puertas</string>
    <string name="bocina">Bocina</string>
    <string name="bloquearPuertas">Bloquear Puertas</string>
    <string name="desbloquearPuertas">Desbloquear Puertas</string>
    <string name="localizar">GPS</string>
    <string name="odometroTotal">odometroTotal</string>
</resources>