<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLuces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLuces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloLuces"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/tbPosicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posicion"
                android:textOff="@string/posicion"
                android:textOn="@string/posicion"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/tbBajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bajas"
                android:textOff="@string/bajas"
                android:textOn="@string/bajas"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/tbAltas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/altas"
                android:textOff="@string/altas"
                android:textOn="@string/altas"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/tbReflector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reflector"
                android:textOff="@string/reflector"
                android:textOn="@string/reflector"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/tbInterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interior"
                android:textOff="@string/interior"
                android:textOn="@string/interior"
                android:textSize="16sp" />
            <Button
                android:id="@+id/AgregarEventos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agregar Evento" />
            <Button
                android:id="@+id/MostrarEventos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mostrar Evento" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableOtros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12pt"
        app:layout_constraintEnd_toEndOf="@+id/tableLuces"
        app:layout_constraintStart_toStartOf="@+id/tableLuces"
        app:layout_constraintTop_toBottomOf="@+id/tableLuces">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBocina2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloBocina"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textBloqPuertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloBloqPuertas"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/tbBocina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bocina"
                android:textOff="@string/bocina"
                android:textOn="@string/bocina"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ToggleButton
                android:id="@+id/tbBloqPuertas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bloquearPuertas"
                android:textOff="@string/bloquearPuertas"
                android:textOn="@string/desbloquearPuertas"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>

    <!--
    <TextView
        android:id="@+id/diplayTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6pt"
        android:layout_marginBottom="6pt"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableOtros"
        app:layout_constraintStart_toStartOf="@+id/tableOtros"
        app:layout_constraintTop_toBottomOf="@+id/tableOtros" />

     -->

    <TableLayout
        android:id="@+id/tableSpeed"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingTop="12pt"
        android:paddingBottom="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableOtros"
        app:layout_constraintStart_toStartOf="@+id/tableOtros"
        app:layout_constraintTop_toBottomOf="@+id/tableOtros">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <me.ibrahimsn.lib.Speedometer
                android:id="@+id/speedometer"
                android:layout_width="155pt"
                android:layout_height="match_parent"
                app:maxSpeed="130"
                app:borderSize="8dp"
                app:metricText="km/h"
                app:borderColor="#402c47"
                app:fillColor="#d83a78"
                app:textColor="#f5f5f5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/diplayTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6pt"
                android:layout_marginBottom="6pt"
                android:layout_weight="1"
                android:textSize="18pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speedometer"

                />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>